--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,9 @@
 // Variables
 @import "base/variables";
 
+// Defaults
+@import "base/default";
+
 // Partials - main css files
 @import "partials/*";
 @import "partials/layout/*";
